# MLDevLearning

./: .gitignore  pyproject.toml
Notebook/: .gitignore  Book.ipynb  DataGen.ipynb  LSTM.ipynb  Temp.ipynb  netflix-movie-recommendation.ipynb  processData.py
Notebook/.ipynb_checkpoints/: Book-checkpoint.ipynb  LSTM-checkpoint.ipynb  netflix-movie-recommendation-checkpoint.ipynb
Notebook/data/temp/: dataGen.py
Notebook/data/temp/0/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
Notebook/data/temp/1/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  3.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv  4.csv  40.csv  41.csv  42.csv  43.csv  44.csv  (+60 more)
TorchLearning/: .gitignore  data.py  lstm.py  pyproject.toml  train.py
TorchLearning/Notebooks/: LSTM.ipynb
TorchLearning/Notebooks/.ipynb_checkpoints/: LSTM-checkpoint.ipynb
TorchLearning/SimpleLSTM/: .gitignore  lstm.py  test.py  train.py
