[tool.poetry]
name = "torchlearning"
version = "0.1.0"
description = ""
authors = ["CodeWizrd <codewizard001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
