[tool.poetry]
name = "torchlearning"
version = "0.1.0"
description = ""
authors = ["CodeWizrd <codewizard001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
numpy = "^1.22.3"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
